# sdkman-for-windows

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TASKs.MD  install.ps1  release.ps1  uninstall.ps1
.github/workflows/: ci.yml  release.yml
scripts/: AGENTS.md  sdk-auto-env.ps1  sdk-completion.ps1  sdk.cmd  sdk.ps1
src/: AGENTS.md  api.rs  archive.rs  cli.rs  commands.rs  config.rs  envfile.rs  fslink.rs  main.rs  shims.rs  state.rs
src/commands/: complete.rs  env.rs  install.rs  list.rs  mod.rs  picker.rs  simple.rs
tests/: AGENTS.md  core.rs  wrappers.rs
