[package]
name = "sdkman-windows"
version = "0.1.9"
edition = "2021"
description = "Native Windows SDKMAN-compatible SDK manager"
license = "Apache-2.0"

[[bin]]
name = "sdk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.10"
thiserror = "1.0"
zip = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"







